syntax = "proto3";

package user;

service UserService {
  rpc getUser (GetUserRequest) returns (User) {}
  rpc getUsers (GetUsersRequest) returns (SearchUsersResponse) {}
  rpc searchUsers (SearchUsersRequest) returns (SearchUsersResponse) {}
  rpc createUser (CreateUserRequest) returns (User) {}
  rpc updateUser (UpdateUserRequest) returns (User) {}
}

message GetUserRequest {
  string id = 1;
}

message GetUsersRequest {
  repeated string ids = 1;
}

message SearchUsersRequest {
  int32 limit = 1;
  int32 offset = 2;
  string keywords = 3;
}

message SearchUsersResponse {
  int32 total = 1;
  repeated User results = 2;
}

message CreateUserRequest {
  optional string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  optional string phone_number = 5;
  optional string profile_image_uri = 6;
  optional string favorite_star_wars_character_swapi_id = 7;
}

message UpdateUserRequest {
  string id = 1;
  optional string first_name = 2;
  optional string last_name = 3;
  optional string email = 4;
  optional string phone_number = 5;
  optional string profile_image_uri = 6;
  optional string favorite_star_wars_character_swapi_id = 7;
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  optional string phone_number = 5;
  string created_at = 6;
  string updated_at = 7;
}
